# SuggestionEngine

./: README.md
SuggestionEngine/: CMakeLists.txt  input.txt  main.cpp  queryInput.txt
TestSuggestionEngine/: CMakeLists.txt  main.cpp  queryInput.txt  wordAndPhrasesInput.txt
TestSuggestionEngine/cmake/: FindsuggestLib.cmake
suggestLib/: CMakeLists.txt  suggestLib.cpp  suggestLib.h
